[package]
name = "doppelpendel_2_0"
version = "0.1.0"
edition = "2018"

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlInputElement", "Event", "CanvasRenderingContext2d", "HtmlCanvasElement", "Window", "Document"] }
js-sys = "0.3"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "s"
